servisler ve controllerların temel yapısı oluşturuldu

--- a/SemWebApp/appsettings.json
+++ b/SemWebApp/appsettings.json
@@ -2,11 +2,24 @@
     "ConnectionStrings": {
         "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=SemPilatesDb;Trusted_Connection=True;MultipleActiveResultSets=true"
     },
+
+    "ApiSettings": {
+        "BaseUrl": "API_BASE_URL",
+        "Endpoints": {
+            "Kullanici": "/api/kullanici",
+            "Ders": "/api/ders",
+            "Randevu": "/api/randevu",
+            "Abonelik": "/api/abonelik",
+            "Odeme": "/api/odeme"
+        }
+    },
+
     "Logging": {
         "LogLevel": {
             "Default": "Information",
             "Microsoft.AspNetCore": "Warning"
         }
     },
+
     "AllowedHosts": "*"
 }
