repositories ve interfacelerin temel yapısı oluşturuldu

--- a/SemWebApp/appsettings.json
+++ b/SemWebApp/appsettings.json
@@ -4,7 +4,7 @@
     },
 
     "ApiSettings": {
-        "BaseUrl": "API_BASE_URL",
+        "BaseUrl": "https://localhost:7246/",
         "Endpoints": {
             "Kullanici": "/api/kullanici",
             "Ders": "/api/ders",
